# advent-of-code

./: README.md
.github/workflows/: build_nix.yml
2023/: .gitignore  README.md
2023/src/: day1.rs  day2.rs  main.rs
2025/: README.md  flake.nix  pyproject.toml
2025/aoc_2025/: cli.py  inputs.py
2025/aoc_2025/days/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py
2025/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py
