[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc-2025"
version = "0.1.0"
description = "My advent of code efforts for 2025"
authors = []
requires-python = ">=3.13"
dependencies = [
    "expecttest",
    "mypy",
    "pytest"
]

[project.scripts]
aoc = "aoc_2025.__main__:main"

[tool.setuptools]
packages = ["aoc_2025", "aoc_2025.days"]
